<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nome_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/nome_usuario"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

    <Button
        android:id="@+id/btn_confirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/confirmar"
        app:layout_constraintEnd_toEndOf="@id/et_nome_usuario"
        app:layout_constraintStart_toStartOf="@id/et_nome_usuario"
        app:layout_constraintTop_toBottomOf="@id/et_nome_usuario" />

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_empty_state_user"
        android:text="@string/empty_state_user"
        android:textAlignment="center"
        android:textSize="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_confirmar"
        app:layout_constraintStart_toStartOf="@+id/et_nome_usuario"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirmar" />

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_user_empty_repos"
        android:text="@string/user_empty_repos"
        android:textAlignment="center"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_confirmar"
        app:layout_constraintStart_toStartOf="@+id/et_nome_usuario"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirmar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lista_repositories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_confirmar"
        tools:listitem="@layout/repository_item"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>